syntax = "proto3";

package request;

import "staff/fields/staff_id_field.proto";

option java_multiple_files = true;
option java_package = "grpc.staff.dto.request";

message CheckStaffByIdRequest {
  fields.StaffIdField staff_id = 1;
}