syntax = "proto3";

package request;

import "staff/fields/staff_email_field.proto";

option java_multiple_files = true;
option java_package = "grpc.staff.dto.request";

message CheckStaffByEmailRequest {
  fields.StaffEmailField staff_email = 1;
}